# Make_math_great_again

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.gradle.kts  prompt.md  pyproject.toml  settings.gradle.kts
.github/workflows/: ci.yml
android-app/: build.gradle.kts
android-app/src/main/: AndroidManifest.xml
android-app/src/main/assets/: topics.json
android-app/src/main/java/com/makemathgreatagain/: MainActivity.java
android-app/src/main/kotlin/com/makemathgreatagain/: MainActivity.kt
android-app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android-app/src/main/res/values-night/: colors.xml  styles.xml
android-app/src/main/res/xml/: network_security_config.xml
docs/: open-source-reference.md  product.md
src/math_learning_graph/: __init__.py  android_export.py  api.py  curriculum_expand.py  curriculum_seed.py  depth.py  diagnostic.py  graph.py  high_school_seed.py  models.py  openai_teacher.py  review.py  seed.py  service.py  teacher.py
tests/: test_ai_teacher_provider.py  test_android_export.py  test_api.py  test_curriculum_framework.py  test_diagnostic.py  test_knowledge_graph.py  test_review_scheduler.py  test_teacher_policy.py
